[gd_scene load_steps=2 format=3 uid="uid://c7h15n4nygixn"]

[ext_resource type="Script" uid="uid://bs0cp250xb1ss" path="res://scenes/enemies_handler.gd" id="1_f4i0p"]

[node name="EnemiesHandler" type="Node2D"]
script = ExtResource("1_f4i0p")

[node name="MoveTimer" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Lines" type="Node2D" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="MoveTimer" to="." method="_on_enemies_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
